<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">LOL Consulter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_rotation_activity">Free champion rotation</string>
    <!-- MainActivity -->
    <string name="summoner_name_hint">Summoner Name</string>
    <string name="search_summoner">Search</string>
    <string name="favorite_summoners">Favorite summoners</string>
    <string name="champion_rotation">Champion rotation</string>
    <!-- Settings -->
    <string name="settings_theme_key" translatable="false">temaKey</string>
    <string name="api_header" translatable="false">Api key</string>
    <string name="miscellaneous_header">Miscellaneous</string>
    <string name="theme_title">Theme</string>
    <string name="theme_dialog">Choose a theme</string>
    <string name="go_riot">Get key</string>
    <string name="copy_clipboard">Copy from clipboard</string>
    <string name="predetermined_theme">System\'s theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <!-- SummonerActivity -->
    <string name="percent" translatable="false">%</string>
    <string name="win_rate">Winrate: %1$d</string>
    <string name="tier" translatable="false">%1$s %2$s</string>
    <string name="lp" translatable="false">%1$dLP</string>
    <string name="solo_duo" translatable="false">Solo/Duo</string>
    <string name="unranked" translatable="false">Unranked</string>
    <string name="flex" translatable="false">Flex</string>
    <string name="before">Older</string>
    <string name="after">Newer</string>
    <string name="summoner_level">Level: %1$d</string>
    <string name="default_lp" translatable="false">0LP</string>
    <!-- One match -->
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="min_seg_time" translatable="false">%1$dm %2$ds</string>
    <string name="kda" translatable="false">KDA</string>
    <string name="kda_value" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="cs" translatable="false">CS</string>
    <string name="cs_value" translatable="false">%1$d (%2$.2f)CS</string>
    <string name="largest_spree">Largest killing spree: %1$d</string>
    <string name="largest_multikill">Largest multikill: %1$d</string>
    <string name="longest_time_alive">Longest time alive: </string>
    <string name="default_winrate" translatable="false">0%</string>
    <!-- Toast and Snackbars -->
    <string name="adding_summoner_error">Error while adding summoner</string>
    <string name="adding_summoner_success">Summoner added successfully</string>
    <string name="deleting_summoner_error">Error while deleting summoner</string>
    <string name="deleting_summoner_success">Summoner deleted successfully</string>
    <string name="no_input">Write something first</string>
    <string name="clipboard_correct">Content copied</string>
    <string name="clipboard_no_content">Nothing on clipboard</string>
    <string name="clipboard_no_valid">Are you sure this is a key?</string>
    <string name="error_key">Invalid api key, maybe it has expired?</string>
    <string name="error_no_key">First set Api Key in Settings</string>
    <string name="error_no_summoner">Can\'t found that summoner</string>

</resources>