<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.InvocadorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/background_mastery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/aatrox_0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/summoner_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="15dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/TranslucentBlackSummoner"
                    app:layout_constraintBottom_toBottomOf="@id/summoner_icon"
                    app:layout_constraintStart_toEndOf="@id/summoner_icon"
                    app:layout_constraintTop_toTopOf="@id/summoner_icon">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/summonerLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="22sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/summoner_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_solo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/TranslucentBlackSummoner"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintStart_toStartOf="@id/summoner_icon"
                    app:layout_constraintTop_toBottomOf="@id/summoner_icon">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/rank_icon_solo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="35dp"
                        android:src="@drawable/emblem_unranked"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rank_solo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/solo_duo"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/rank_icon_solo"
                        app:layout_constraintEnd_toEndOf="@+id/rank_icon_solo"
                        app:layout_constraintStart_toStartOf="@+id/rank_icon_solo" />

                    <TextView
                        android:id="@+id/rank_solo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unranked"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@id/bg_bar_solo"
                        app:layout_constraintStart_toStartOf="@+id/bg_bar_solo"
                        app:layout_constraintTop_toTopOf="@id/rank_solo_text" />

                    <ProgressBar
                        android:id="@+id/bg_bar_solo"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="10dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/stats_full"
                        app:layout_constraintStart_toEndOf="@id/rank_icon_solo"
                        app:layout_constraintTop_toTopOf="@id/rank_icon_solo" />

                    <ProgressBar
                        android:id="@+id/stats_bar_solo"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="75"
                        android:progressDrawable="@drawable/stats_progress"
                        app:layout_constraintBottom_toBottomOf="@id/bg_bar_solo"
                        app:layout_constraintEnd_toEndOf="@id/bg_bar_solo"
                        app:layout_constraintStart_toStartOf="@id/bg_bar_solo"
                        app:layout_constraintTop_toTopOf="@id/bg_bar_solo" />

                    <TextView
                        android:id="@+id/win_ratio_solo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_winrate"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/lp_solo"
                        app:layout_constraintEnd_toEndOf="@+id/bg_bar_solo"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/bg_bar_solo"
                        app:layout_constraintTop_toTopOf="@+id/bg_bar_solo"
                        app:layout_constraintVertical_bias="0.65" />

                    <TextView
                        android:id="@+id/lp_solo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@id/bg_bar_solo"
                        app:layout_constraintEnd_toEndOf="@id/bg_bar_solo"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/bg_bar_solo"
                        app:layout_constraintTop_toBottomOf="@+id/win_ratio_solo"
                        app:layout_constraintVertical_bias="0.1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_flex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/TranslucentBlackSummoner"
                    app:layout_constraintEnd_toEndOf="@id/layout_solo"
                    app:layout_constraintStart_toStartOf="@id/layout_solo"
                    app:layout_constraintTop_toBottomOf="@id/layout_solo">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/rank_icon_flex"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="35dp"
                        android:src="@drawable/emblem_unranked"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rank_flex_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/flex"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/rank_icon_flex"
                        app:layout_constraintEnd_toEndOf="@+id/rank_icon_flex"
                        app:layout_constraintStart_toStartOf="@+id/rank_icon_flex" />

                    <TextView
                        android:id="@+id/rank_flex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unranked"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/bg_bar_flex"
                        app:layout_constraintStart_toStartOf="@+id/bg_bar_flex"
                        app:layout_constraintTop_toTopOf="@+id/rank_flex_text" />

                    <ProgressBar
                        android:id="@+id/bg_bar_flex"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="10dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/stats_full"
                        app:layout_constraintStart_toEndOf="@id/rank_icon_flex"
                        app:layout_constraintTop_toTopOf="@id/rank_icon_flex" />

                    <ProgressBar
                        android:id="@+id/stats_bar_flex"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="75"
                        android:progressDrawable="@drawable/stats_progress"
                        app:layout_constraintBottom_toBottomOf="@id/bg_bar_flex"
                        app:layout_constraintEnd_toEndOf="@id/bg_bar_flex"
                        app:layout_constraintStart_toStartOf="@id/bg_bar_flex"
                        app:layout_constraintTop_toTopOf="@id/bg_bar_flex" />

                    <TextView
                        android:id="@+id/win_ratio_flex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_winrate"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/lp_flex"
                        app:layout_constraintEnd_toEndOf="@+id/bg_bar_flex"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/bg_bar_flex"
                        app:layout_constraintTop_toTopOf="@+id/bg_bar_flex"
                        app:layout_constraintVertical_bias="0.65" />

                    <TextView
                        android:id="@+id/lp_flex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@id/bg_bar_flex"
                        app:layout_constraintEnd_toEndOf="@id/bg_bar_flex"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/bg_bar_flex"
                        app:layout_constraintTop_toBottomOf="@+id/win_ratio_flex"
                        app:layout_constraintVertical_bias="0.1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/match_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:src="@drawable/star_border"
        android:theme="@style/Theme.LOLDAM.fab"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>